# credit-card-fraud-detection

./: .gitignore  pyproject.toml
models/: gaussian_nb_model.pkl  kmeans_model.pkl  scaler.pkl
notebooks/: 01_eda.ipynb  02_visualization.ipynb  03_credit_card_fraud_detection.ipynb  eda_report.html
sql/: queries.sql  schema.sql
src/: db.py  load_to_postgres.py
